2006-09-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list_related.cc: 
	get_suitable_record_to_view_details(): If the ID is invalid, because 
	no such record exists, warn the user with a dialog.
	* glom/utility_widgets/flowtablewithfields.cc:
	on_portal_user_requested_details(): Do not bother signalling further if 
	the primary key is empty.

1.1.1:

2006-09-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/db_adddel.h: Add show_hints_model(), which 
	shows a single row, with a hint about editing the layout of the list or 
	related records portal, if no fields have been specified yet. 
	Bug #354073 from Peter Williams.

2006-09-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h: Override set_file_uri() to avoid 
	the call to set_modified() triggering a save of the file to the old filename.
	This is necessary because we override/hack set_modified().

2006-09-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: App_Glom::recreate_database(): Add the standard groups 
	after creating the tables, instead of once for every table. This should be 
	more efficient.

2006-09-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Field calculation editor, and button script editor:
	Mark the label with the first part of the calculation as not for translation.
	Layout editors: Add tooltips to explain what the buttons do. 
	This partly addreses bug #354073 from Peter Williams.

2006-09-17  Murray Cumming  <murrayc@murrayc.com>

        * glom/utility_widgets/db_adddel/db_adddel.cc:
        * glom/utility_widgets/db_adddel/db_adddel.h: Added get_fixed_cell_height().
        construct_specified_columns() Use CellRenderer::set_fixed_size(), using
        get_fixed_cell_height(), which asks Pango how high some example text should